// Since: provenance 1.12
syntax = "proto3";
package provenance.expiration.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "provenance/expiration/v1/expiration.proto";
// import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package          = "github.com/provenance-io/provenance/x/expiration/types";
option java_package        = "io.provenance.expiration.v1";
option java_multiple_files = true;

// Query defines the gRPC querier service for expiration module.
service Query {
  // Params queries the parameters for x/expiration
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/provenance/expiration/v1/params";
  }

  // Query Expiration
  rpc QueryExpiration(QueryExpirationRequest) returns (QueryExpirationResponse) {
    option (google.api.http).get = "/provenance/expiration/v1/{module_asset_id}";
  }

  // Query all Expirations
  rpc QueryAllExpirations(QueryAllExpirationsRequest) returns (QueryAllExpirationsResponse) {
    option (google.api.http).get = "/provenance/expiration/v1/all";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryExpirationRequest queries for a specific expiration
message QueryExpirationRequest {
  string module_asset_id = 1 [(gogoproto.moretags) = "yaml:\"module_asset_id\""];
}

// QueryExpirationResponse response for querying for a specific expiration
message QueryExpirationResponse {
  Expiration expiration = 1;
}

// QueryAllExpirationsRequest queries all expirations
message QueryAllExpirationsRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryAllExpirationsResponse response for querying all expirations
message QueryAllExpirationsResponse {
  repeated Expiration expirations = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
